--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@ngrx/store": "^7.1.0",
     "core-js": "^2.5.4",
     "firebase": "^5.8.0",
     "hammerjs": "^2.0.8",
